# ecommerce-product-service

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 52cea9d9b428_create_product_table.py  de2c69599e32_initial_migration_with_uuid_products.py
app/: main.py
app/api/routes/: products.py
app/api/v1/endpoints/: products.py
app/core/: config.py  logging.py
app/crud/: product.py
app/models/: product.py
app/schemas/: product.py
app/services/: __init__.py  product_service.py
scripts/: __init__.py  generate_secrets.py  init_project.py  seed_data.py
src/: main.py
src/models/: __init__.py  product.py
src/routes/: __init__.py  product_routes.py
src/services/: product_service.py
